@@ -1,3 +1,7 @@
+2009-03-31  Mike Krüger  <mkrueger@novell.com>
+
+	* Gui/NRefactoryResolver.cs: Worked on C#3 lambda resolving.
+
 2009-03-30  Mike Krüger  <mkrueger@novell.com>
 
 	* Gui/CSharpTextEditorCompletion.cs: Removed debug message.
